# vector-query-engine

./: README.md  main.py  pyproject.toml
static/: index.html  style.css
