[tool.poetry]
name = "vector-query-engine"
version = "0.1.0"
description = ""
authors = ["tyndev <17089219+tyndev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
supabase = "^2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
